Revert "fix: starrate with proper size on mobile devices"
This reverts commit ba6287d5176b0184f162417619480f9551a49821.

--- a/src/components/common/StarRate/StarRate.scss
+++ b/src/components/common/StarRate/StarRate.scss
@@ -5,9 +5,3 @@
   border-radius: 12px;
   color: #ffbb00;
 }
-
-@media (max-width: 1200px) {
-  .StarRate {
-    font-size: 12px;
-  }
-}
